Create some simple function to ask a username and show it

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
 
   <div id="card">
     <h1>Here will be a motivation card.</h1>
+    <img src="favicon.ico">
   </div>
 
   <script src="js/vendor/modernizr-{{MODERNIZR_VERSION}}.min.js"></script>
