Setup react, implement existing content by react components and rendering.

--- a/src/index.html
+++ b/src/index.html
@@ -7,16 +7,8 @@
   <title>Motivation</title>
 </head>
 <body>
-<div id="main">
-  <!--[if lte IE 9]>
-  <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a
-    href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-  <![endif]-->
-
-  <div id="card">
-    <h1>Here will be a motivation card.</h1>
-    <img src="assets/media/icon.png">
-  </div>
+<div id="container">
+  <!-- Here will be my component -->
 </div>
 </body>
 </html>
